# safelynx

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_add_browser_camera_type.sql
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/services/: detection_service.rs  event_bus.rs  face_matcher.rs  mod.rs  recording_service.rs  storage_manager.rs
backend/src/application/use_cases/: manage_cameras.rs  manage_profiles.rs  mod.rs  process_frame.rs  query_analytics.rs
backend/src/domain/: events.rs  mod.rs  repositories.rs
backend/src/domain/entities/: camera.rs  detection.rs  mod.rs  profile.rs  recording.rs  settings.rs  sighting.rs
backend/src/domain/value_objects/: bounding_box.rs  face_embedding.rs  geo_location.rs  mod.rs  profile_tag.rs
backend/src/infrastructure/: config.rs  mod.rs
backend/src/infrastructure/camera/: capture.rs  capture_old.rs  face_detector.rs  mod.rs  service.rs
backend/src/infrastructure/database/: connection.rs  mod.rs  models.rs
backend/src/infrastructure/database/repositories/: camera_repository.rs  mod.rs  profile_repository.rs  recording_repository.rs  settings_repository.rs  sighting_repository.rs
backend/src/infrastructure/server/: app_state.rs  mod.rs  websocket.rs
backend/src/infrastructure/server/api/: analytics.rs  cameras.rs  health.rs  mod.rs  profiles.rs  recordings.rs  settings.rs  sightings.rs
docker/: docker-compose.yml  init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  MASTER_ITERATION_GUIDE.md  OPTIMIZATION_ROADMAP.md  PRODUCT_REQUIREMENTS.md  TECHNICAL_SPECIFICATION.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: BrowserCamera.tsx  CameraPreview.tsx  Charts.tsx  (+8 more)
scripts/: setup.sh
(+32 files in other folders)
